syntax = "proto3";

package odpf.raccoon;

message SampleEvent {
  string description = 1;
}
