syntax = "proto3";

package odpf.clickstream.proto;

option go_package="raccoon/websocket/proto";

message Event {
  // Data/byteArray of the serialised product proto.
  bytes eventBytes = 1;
  /* This is the protoMessageName which the protoc provides with each compiled proto.
    This type is used by raccoon to distribute events to respective Kafka topics.
  */
  string type = 2;
 }