syntax = "proto3";

package odpf.clickstream.proto;

option go_package="raccoon/websocket/proto";

message EventResponse {
  Status status = 1;
  Code code = 2;
  int64 sent_time = 3;
  string reason = 4;
  map<string, string> data = 5;
}

enum Status {
    UNKNOWN_STATUS = 0;
    SUCCESS = 1;
    ERROR = 2;
}

enum Code {
    UNKNOWN_CODE = 0;
    OK = 1;
    BAD_REQUEST = 2;
    INTERNAL_ERROR = 3;
    MAX_CONNECTION_LIMIT_REACHED = 4;
    MAX_USER_LIMIT_REACHED = 5;
}
